[workspace.package]
version = "0.0.1"
name = "sable"
edition = "2021"
license = "MIT"
authors = ["The Sable Team"]
repository = "https://github.com/sableland/sable"

[workspace]
resolver = "2"
members = ["ext", "sable"]

[workspace.dependencies]
deno_core = "0.287.0"
deno_ast = { version = "0.39.1", features = ["transpiling"] }
tokio = { version = "1.38.0", features = ["full"] }
imara-diff = "0.1.5"
owo-colors = "4.0.0"

sable_ext = { path = "./ext/" }
