[package]
name = "bueno_runtime"
description = "Bueno runtime"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "bueno"
path = "main.rs"

[dependencies]
deno_core = "0.205.0"
deno_ast = { version = "0.28.0", features = ["transpiling"] }
clap = { version = "4.4.0" }
tokio = { version = "1.19.2", features = ["full"] }
reqwest = "0.11.20"

bueno_ext = { path = "../ext" }

[build-dependencies]
deno_core = "0.205.0"
