[package]
name = "bueno_runtime"
description = "Bueno runtime"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "bueno"
path = "main.rs"

[dependencies]
deno_core.workspace = true
deno_ast.workspace = true
tokio.workspace = true
bueno_ext.workspace = true

clap = "4.4.0"
reqwest = "0.11.20"
shellexpand = "3.1.0"


[build-dependencies]
deno_core.workspace = true
bueno_ext.workspace = true
