[package]
name = "bueno_runtime"
description = "Bueno runtime"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "bueno"
path = "main.rs"

[dependencies]
deno_core.workspace = true
deno_ast.workspace = true
tokio.workspace = true
bueno_ext.workspace = true

clap = "4.4.0"
reqwest = "0.11.20"
shellexpand = "3.1.0"
glob = "0.3.1"

dprint-plugin-json = "=0.17.4"
dprint-plugin-markdown = "=0.16.1"
dprint-plugin-typescript = "=0.87.1"

oxc_allocator = "0.2.0"
oxc_ast = "0.2.0"
oxc_diagnostics = "0.2.0"
oxc_parser = "0.2.0"
oxc_semantic = "0.2.0"
oxc_span = "0.2.0"

[build-dependencies]
deno_core.workspace = true
bueno_ext.workspace = true
