[package]
name = "bueno_ext"
description = "Bueno runtime extensions"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "lib.rs"

[dependencies]
deno_core.workspace = true
bueno_ext_battery = { path = "./battery/" }
bueno_ext_fs = { path = "./fs/" }
bueno_ext_performance = { path = "./performance/" }
bueno_ext_timers = { path = "./timers/" }

[features]
default = ["battery", "fs", "performance", "timers"]
battery = []
fs = []
performance = []
timers = []
