[package]
name = "sable_ext"
description = "Sable runtime extensions"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "lib.rs"

[dependencies]
deno_core.workspace = true
sable_ext_battery = { path = "./battery/" }
sable_ext_crypto = { path = "./crypto/" }
sable_ext_device = { path = "./device/" }
sable_ext_fs = { path = "./fs/" }
sable_ext_performance = { path = "./performance/" }
sable_ext_timers = { path = "./timers/" }
sable_ext_testing = { path = "./testing/" }
sable_ext_runtime = { path = "./runtime/" }
sable_ext_web = { path = "./web/" }
sable_ext_storage = { path = "./storage/" }
