[package]
name = "sable_runtime"
description = "Sable runtime"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "sable"
path = "main.rs"

[dependencies]
deno_core.workspace = true
deno_ast.workspace = true
tokio.workspace = true
sable_ext.workspace = true

clap = "4.4.0"
reqwest = "0.11.20"
shellexpand = "3.1.0"
glob = "0.3.1"

dprint-plugin-json = "=0.19.2"
dprint-plugin-markdown = "=0.16.4"
dprint-plugin-typescript = "=0.88.10"

[build-dependencies]
deno_core.workspace = true
sable_ext.workspace = true
