[package]
name = "sable_ext_battery"
description = "Sable battery extension"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "lib.rs"

[dependencies]
deno_core.workspace = true
battery = { version = "0.7.8" }
