[package]
name = "sable_ext_device"
description = "Sable device extension"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "lib.rs"

[dependencies]
deno_core.workspace = true
uuid = { version = "1.8.0", features = ["v4"] }
device_query = "2.1.0"
