[package]
name = "bueno_ext_fetch"
description = "Bueno fetch API"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "lib.rs"

[dependencies]
deno_core.workspace = true
tokio.workspace = true
reqwest.workspace = true