[package]
name = "sable_ext_performance"
description = "Sable Performance extension"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "lib.rs"

[dependencies]
deno_core.workspace = true
tokio.workspace = true
