[package]
name = "bueno_ext_runtime"
description = "Bueno extension for runtime related things"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "lib.rs"

[dependencies]
deno_core.workspace = true
bueno_ext_testing = { path = "../testing" }
