[package]
name = "sable_ext_runtime"
description = "Sable extension for runtime related things"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "lib.rs"

[dependencies]
deno_core.workspace = true
sable_ext_testing = { path = "../testing" }
